--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <ul class='list-desktop'>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
-        <li>Contact</li>
+        <li><a href="./contact.html">Contact</a></li>
         <li>Blog</li>
         <li>Careers</li>
       </ul>
@@ -39,7 +39,7 @@
     <ul>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./about.html">About</a></li>
-      <li>Contact</li>
+      <li><a href="./contact.html">Contact</a></li>
       <li>Blog</li>
       <li>Careers</li>
     </ul>
@@ -51,93 +51,6 @@
       <p>Very smart dinamic and organized bank willing to help everyone to succeed and grow up!</p>
       <button>Learn more...</button>
     </div>
-
-
-
-
-    <!-- <div class="content-above-middle">
-      <h1>Why choose Easybank?</h1>
-      <p>We leverage Open Banking to turn your bank account into your financial hub. Control
-        your finances like never before.</p>
-    </div> -->
-
-    <!-- <div class="middle-container">
-      <div class="middle-content">
-        <img src="./images/icon-online.svg">
-        <h2>Online Banking</h2>
-        <p>Our modern web and mobile applications allow you to keep track of your finances
-          wherever you are in the world.</p>
-      </div>
-
-      <div class="middle-content">
-        <img src="./images/icon-budgeting.svg">
-        <h2>Simple Budgeting</h2>
-        <p>See exactly where your money goes each month. Receive notifications when you’re
-          close to hitting your limits.</p>
-      </div>
-
-      <div class="middle-content">
-        <img src="./images/icon-onboarding.svg">
-        <h2>Fast Onboarding</h2>
-        <p>We don’t do branches. Open your account in minutes online and start taking control
-          of your finances right away.</p>
-      </div>
-
-      <div class="middle-content">
-        <img src="./images/icon-api.svg">
-        <h2>Open API</h2>
-        <p>Manage your savings, investments, pension, and much more from one account. Tracking
-          your money has never been easier.</p>
-      </div>
-    </div> -->
-
-    <!-- <div class="down-text">
-      <h1>Latest Articles</h1>
-    </div>
-
-    <div class="down-container">
-
-      <div class="down-content">
-        <img src="./images/image-currency.jpg">
-        <div class="down-inner-content">
-          <small>By Claire Robinson</small>
-          <strong>Receive money in any currency with no fees</strong>
-          <p>The world is getting smaller and we’re becoming more mobile. So why should you be
-            forced to only receive money in a single …</p>
-        </div>
-      </div>
-
-      <div class="down-content">
-        <img src="./images/image-restaurant.jpg">
-        <div class="down-inner-content">
-          <small>By Wilson Hutton</small>
-          <strong>Treat yourself without worrying about money</strong>
-          <p> Our simple budgeting feature allows you to separate out your spending and set
-            realistic limits each month. That means you …</p>
-        </div>
-      </div>
-
-      <div class="down-content">
-        <img src="./images/image-plane.jpg">
-        <div class="down-inner-content">
-          <small>By Wilson Hutton</small>
-          <strong>Take your Easybank card wherever you go</strong>
-          <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-            while you’re abroad. We’ll even show you …</p>
-        </div>
-      </div>
-
-      <div class="down-content">
-        <img src="./images/image-confetti.jpg">
-        <div class="down-inner-content">
-          <small>By Claire Robinson</small>
-          <strong>Our invite-only Beta accounts are now live!</strong>
-          <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
-            It’s easy to request an invite through the site ...</p>
-        </div>
-      </div>
-    </div> -->
-
 
   </div> <!-- end container -->
 
