--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="contact.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -44,99 +46,51 @@
     </ul>
   </div>
 
+
+
   <div class="container">
     <div class="upper-content">
-      <h1>Next generation digital banking</h1>
-      <p>Take your financial life online. Your Easybank account will be a one-stop-shop
-        for spending, saving, budgeting, investing, and much more.</p>
-      <button>Request Invite</button>
+      <h1>CONTACT US</h1>
+      <p>Please fell free to get in contact with us!</p>
     </div>
 
-    <div class="content-above-middle">
-      <h1>Why choose Easybank?</h1>
-      <p>We leverage Open Banking to turn your bank account into your financial hub. Control
-        your finances like never before.</p>
+
+    <div class="form-image">
+      <img src="./images/fom-back.png">
+      <img src="./images/form.png">
     </div>
 
-    <div class="middle-container">
-      <div class="middle-content">
-        <img src="./images/icon-online.svg">
-        <h2>Online Banking</h2>
-        <p>Our modern web and mobile applications allow you to keep track of your finances
-          wherever you are in the world.</p>
+    <form class="form-content">
+      <label>First name</label>
+      <input type="text" placeholder="First name">
+
+      <label>Last name</label>
+      <input type="text" placeholder="Last name">
+
+      <label>Company name</label>
+      <input type="text" placeholder="Company name">
+
+      <label>Company email</label>
+      <input type="text" placeholder="Company email">
+
+      <label>Comments</label>
+      <textarea type='text'>write here...</textarea>
+
+      <label>Country</label>
+      <select class="country">
+        <option value="australia">Australia</option>
+        <option value="canada">Canada</option>
+        <option value="usa">USA</option>
+      </select>
+      <div class="btn">
+        <button>Submit</button>
       </div>
 
-      <div class="middle-content">
-        <img src="./images/icon-budgeting.svg">
-        <h2>Simple Budgeting</h2>
-        <p>See exactly where your money goes each month. Receive notifications when you’re
-          close to hitting your limits.</p>
-      </div>
-
-      <div class="middle-content">
-        <img src="./images/icon-onboarding.svg">
-        <h2>Fast Onboarding</h2>
-        <p>We don’t do branches. Open your account in minutes online and start taking control
-          of your finances right away.</p>
-      </div>
-
-      <div class="middle-content">
-        <img src="./images/icon-api.svg">
-        <h2>Open API</h2>
-        <p>Manage your savings, investments, pension, and much more from one account. Tracking
-          your money has never been easier.</p>
-      </div>
-    </div>
-
-    <div class="down-text">
-      <h1>Latest Articles</h1>
-    </div>
-
-    <div class="down-container">
-
-      <div class="down-content">
-        <img src="./images/image-currency.jpg">
-        <div class="down-inner-content">
-          <small>By Claire Robinson</small>
-          <strong>Receive money in any currency with no fees</strong>
-          <p>The world is getting smaller and we’re becoming more mobile. So why should you be
-            forced to only receive money in a single …</p>
-        </div>
-      </div>
-
-      <div class="down-content">
-        <img src="./images/image-restaurant.jpg">
-        <div class="down-inner-content">
-          <small>By Wilson Hutton</small>
-          <strong>Treat yourself without worrying about money</strong>
-          <p> Our simple budgeting feature allows you to separate out your spending and set
-            realistic limits each month. That means you …</p>
-        </div>
-      </div>
-
-      <div class="down-content">
-        <img src="./images/image-plane.jpg">
-        <div class="down-inner-content">
-          <small>By Wilson Hutton</small>
-          <strong>Take your Easybank card wherever you go</strong>
-          <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-            while you’re abroad. We’ll even show you …</p>
-        </div>
-      </div>
-
-      <div class="down-content">
-        <img src="./images/image-confetti.jpg">
-        <div class="down-inner-content">
-          <small>By Claire Robinson</small>
-          <strong>Our invite-only Beta accounts are now live!</strong>
-          <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
-            It’s easy to request an invite through the site ...</p>
-        </div>
-      </div>
-    </div>
-
+    </form>
 
   </div> <!-- end container -->
+
+
 
   <div class="footer-container">
 
